--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
 body {
-  background-image: url('https://www.pokemon.com/static-assets/content-assets/cms2/img/pokedex/full/658_f2.png');
+  background-image: url('https://www.geekno.com/it/wp-content/uploads/sites/3/2018/10/salamence-1280x720.png');
   background-repeat: repeat;
 }
